tests/ivg/invalid/path_arc_move_too_few.ivg
format IVG-3
BOUNDS 0,0,10,10
// arc-move requires three numbers
PATH [move-to 0,0; arc-move 5,5]

